--- a/css/oliver-johnson---solutions-engineering.webflow.css
+++ b/css/oliver-johnson---solutions-engineering.webflow.css
@@ -303,10 +303,12 @@ li {
 
 .paragraph, .paragraph-2 {
   padding-right: 20px;
+  font-size: 16px;
 }
 
 .paragraph-3, .paragraph-4 {
   padding-left: 20px;
+  font-size: 16px;
 }
 
 .section-bottom {
